--- a/设计模式.md
+++ b/设计模式.md
@@ -29,3 +29,7 @@ final class Singleton
 
 ```
 
+## 2. 门面模式和模板模式的区别
+
+template method 是继承关系，父类规定函数调用顺序，子类对各函数进行实现
+facade 是组合关系，facede 清楚组合进来的类函数调用顺序，这些类不需要继承
