--- a/算法题.md
+++ b/算法题.md
@@ -46,3 +46,25 @@ function getCows($years)
 	return $count;
 }
 ```
+
+## 给定String类型的数组strArr，再给定整数k，请严格按照出现顺序打印出现出现次数前k名的字符串。strArr=["1","3","3","4","1","5","1"], k=3 No.1:1,times:3  No.2:3,times:2 No.3:4,times:1  要求：如果strArr长度为N，时间复杂度请达到O(Nlogk)【2月16 头条】
+```
+function getSort($str, $k = 1) {
+	$arr = array();
+
+	foreach ($str as $val) {
+		if (!isset($arr[$val])) {
+			$arr[$val] = 1;
+		} else {
+			$arr[$val]++;
+		}
+	}
+	arsort($arr);
+	return array_slice($arr, 0, $k);
+}
+
+$strArr = ["1", "3", "3", "3", "3", "4", "1", "5", "1"];
+
+var_dump(getSort($strArr, 3));
+```
+
