--- a/高并发.md
+++ b/高并发.md
@@ -62,9 +62,9 @@
 
 常用的交换器主要分为一下三种
 
-fanout：如果交换器收到消息，将会广播到所有绑定的队列上
-direct：如果路由键完全匹配，消息就被投递到相应的队列
-topic：可以使来自不同源头的消息能够到达同一个队列。 使用topic交换器时，可以使用通配符
+- fanout：如果交换器收到消息，将会广播到所有绑定的队列上
+- direct：如果路由键完全匹配，消息就被投递到相应的队列
+- topic：可以使来自不同源头的消息能够到达同一个队列。 使用topic交换器时，可以使用通配符
 
 
 ## 9、如何确保消息不丢失？
