--- a/公司介绍.md
+++ b/公司介绍.md
@@ -1,4 +1,16 @@
 ## 好未来协同办公组
 主要是用来开发一个内部协同通信软件【类似钉钉】
 1. 领导用来提高人效。会议、排课等。可以给第三方使用。
-2. 
+
+## 百度有驾
+1. 大搜，知识体系：知道；垂搜：有驾；阿拉丁；
+
+## 顺丰同城
+
+## 好未来
+出版组
+
+## 百度文库
+
+## 滴滴出行
+针对旅游，从家出发到机场或者车站。从车站机场到目的地。
