--- a/算法题.md
+++ b/算法题.md
@@ -68,3 +68,51 @@ $strArr = ["1", "3", "3", "3", "3", "4", "1", "5", "1"];
 var_dump(getSort($strArr, 3));
 ```
 
+## 求中位数。（【1，2】， 【3，4】）
+```
+<?php
+
+class Solution {
+
+	/**
+	 * @param Integer[] $nums1
+	 * @param Integer[] $nums2
+	 * @return Float
+	 */
+	function findMedianSortedArrays($nums1, $nums2) {
+		$nums = array();
+		while (!empty($nums1) && !empty($nums2)) {
+			if ($nums1[0] < $nums2[0]) {
+				$nums[] = array_shift($nums1);
+			} else {
+				$nums[] = array_shift($nums2);
+			}
+		}
+
+		while (!empty($nums1)) {
+			$nums[] = array_shift($nums1);
+		}
+
+		while (!empty($nums2)) {
+			$nums[] = array_shift($nums2);
+		}
+
+		$count = count($nums);
+		if ($count % 2 == 1) {
+			return $nums[$count / 2];
+		} else {
+			$mid = $count / 2;
+			return ($nums[$mid] + $nums[$mid - 1]) / 2;
+		}
+
+		return -1;
+	}
+}
+
+$result = new Solution();
+
+$nums1 = [1, 2];
+$nums2 = [3, 4];
+
+print_r($result->findMedianSortedArrays($nums1, $nums2));
+```
