--- a/项目介绍.md
+++ b/项目介绍.md
@@ -1,3 +1,5 @@
+项目的效果和项目的需求：个人的收货和项目的效果。
+
 ## 活动平台的介绍：
 1. 有一张活动表，他用来记录活动的基本信息：活动id，创建人，创建时间，活动名称，修改时间等等，活动状态。
 2. 有一张 组件表，记录活动使用了哪些组件，以及组件的一些配置。【活动的一些背景色等信息】
@@ -9,3 +11,74 @@
 2. 在这个活动上面，添加房源上传的组件。组件表用来保存包括一些组件的基本信息。比如房源展示数量，排列布局配置等信息。
 3. 上传房源，有一个房源组表，用来保存房源城市信息。
 4. 还有一个房源表，用来上传城市下面的房源。【房源表和房源组表，是一对多的关系，每个城市下面，可以对应多套房源】
+
+##  说一下，你觉得有技术难点的项目
+您觉得我的项目里面，哪一个可以提升复杂度？
+
+
+## 自己介绍自己的项目：
+
+做项目：一定要有逻辑能力。
+
+1. 面试官让介绍自己的项目，为项目中有什么难点？其实是想问你跟别人的不同点，这是初衷。所有人都差不多，得让面试官看到你的优缺点吧。你能不能主动思考问题。喜不喜欢回顾，喜不喜欢总结？
+
+我叫王朝阳，2018年6月从长春理工大学的电子科学与技术专业毕业，学历是硕士。从事PHP有一年半的时间。18年6月校招去的广州棒骨科技有限公司，从事跨境电商的站点开发。然后18年11月来的北京快跑科技有限公司，主要从事投放统计的效果与追踪，做日常促销、节日活动活动，网安数据上报这一块的业务。
+
+
+
+#### 项目一：
+
+技术栈就不用说了，简历上面已经说了。不是平台，是业务。服务化的拆分。我的架构，一方面是业务需求，把广告投放这一块给独立出来，然后给广告平台去提供业务。
+
+##### 架构：
+1. 是与第三方的广告平台进行交互的。以callback和主动调取的形式。主要是点击数据的激活和获取。
+2. 同时等待客户端数据的上报到我们公司的用户数据。我的数据一方面回传给投放平台，一方面支持市场同学的数据需求。然后也支持大数据平台的建设，进行数据价值的分析。
+
+##### 功能细节：
+1. 提供一个https的接口，给广告平台。用户点击广告的时候，广告平台会以调用callback的形式调用我的接口。然后请求数据存储到redis 里面。
+2. 用户下载客户端之后，会上报给用户中心，然后用户以mq的形式，发送消息。
+3. 我这边监听消息，然后去redis里面进行数据匹配，然后匹配成功后，回传给广告平台，并存储到数据库。
+4. 以报表的形式，每日给市场同学， 发送数据脚本。
+5. 支持大数据平台的数据建设，将数据的报表以及转化，以数据平台的形式，进行数据展示。
+6. ES 是用来进行日志的分析，以及接口请求量的变化，防止异常流量。
+7. 匹配成功的话，也记录了日志，能看到下载量和激活量的变化。
+
+##### 难点，
+1. 限制大量请求。
+2. 检测，异常流量下降
+
+先说，数据怎么流转，别人怎么调用你，你怎么调用别人，然后再说你的qps是多少，
+
+##### 问题：这个系统有点糙。重复点击怎么办？
+点击了多少次，才能完成一次转化，这个事情怎么解决？大数据那边可以看到的啊。数据的挖掘。。。第一次没成功，第二次没成功。可以自己想一想。
+
+##### 项目收货：
+1. 认识到了日志的作用，通过日志来监测异常流量，能快速定位问题。
+2. 分布式系统的稳定性，排查能力。还是bug问题。iOS突然减少，通过监测日志系统报警监控。es日志量iOS激活量抖降。PHP日志，没有异常，也米有满请求。也没有500问题。然后定位是iOS 13客户端的问题。感觉了日志在工作中的重要性。日志可以用来统计报表，也能排查问题。提供排查问题思路。是在为整个分布式系统排查问题。通过日志的看板，来监控异常流量。一个是太多，一个是太少。
+
+##### 收获：
+先说收获，再说怎么排查问题。先看web 卡，还是MySQL卡，还是NGINX卡。性能问题，网络开销问题。熟悉框架，熟悉设计模式。稳定性以及bug的定位
+
+## 项目二：
+功能：卖给用户，官网上面去进行售卖。运营创建活动，配置活动规则。
+
+1. 前端调用活动平台，活动平台调用支付，生成唯一的paycode码。
+2. 前端带着paycode去调用支付。
+3. 然后支付组去调用支付宝或者微信。
+4. 活动平台，通过mq来监听支付的结果。修改售卖状态，然后在用户权益去进行展示。
+
+我们也用了xphrof去进行性能的优化。
+
+##### 项目收货：
+1. 自己担任项目经历，提升了跨项目组的团队协作能力。
+2. 如何保证项目的进度呢？
+拆分任务数和时间，给出项目排期推进项目上线。每天在群里公布项目进度。前期的项目拆分一定要细化，思维导图和甘特图。保证项目的推进。
+3. 对项目管理和，对于交易系统有了了解。
+4. 对数据库的认知：简历索引，数据优化。表啊，字段啊，怎么去优化。
+
+## 活动平台：
+模板化，和组件化，
+
+项目收获：明白了活动组能支持多少功能，业务能力和业务边界。系统的扩展性，系统的稳定性，希望能看到你的一个快速成长的轨迹。设计模式的了解呢？对设计模式有了更深入的了解和实践。
+
+通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
