--- a/项目介绍.md
+++ b/项目介绍.md
@@ -54,7 +54,7 @@
 
 ##### 项目收货：
 1. 认识到了日志的作用，通过日志来监测异常流量，能快速定位问题。
-2. 分布式系统的稳定性，排查能力。还是bug问题。iOS突然减少，通过监测日志系统报警监控。es日志量iOS激活量抖降。PHP日志，没有异常，也米有满请求。也没有500问题。然后定位是iOS 13客户端的问题。感觉了日志在工作中的重要性。日志可以用来统计报表，也能排查问题。提供排查问题思路。是在为整个分布式系统排查问题。通过日志的看板，来监控异常流量。一个是太多，一个是太少。
+2. 分布式系统的稳定性，排查能力。还是bug问题。iOS突然减少，通过监测日志系统报警监控。es日志量iOS激活量抖降。PHP日志，没有异常，也没有慢请求。也没有500问题。然后定位是iOS客户端的问题。感觉了日志在工作中的重要性。日志可以用来统计报表，也能排查问题。提供排查问题思路。是在为整个分布式系统排查问题。通过日志的看板，来监控异常流量。一个是太多，一个是太少。
 
 ##### 收获：
 先说收获，再说怎么排查问题。先看web 卡，还是MySQL卡，还是NGINX卡。性能问题，网络开销问题。熟悉框架，熟悉设计模式。稳定性以及bug的定位
@@ -66,6 +66,7 @@
 2. 前端带着paycode去调用支付。
 3. 然后支付组去调用支付宝或者微信。
 4. 活动平台，通过mq来监听支付的结果。修改售卖状态，然后在用户权益去进行展示。
+5. 并通过接口请求，去通知促销组那边，给用户添加促销资格。
 
 我们也用了xphrof去进行性能的优化。
 
