--- a/项目介绍.md
+++ b/项目介绍.md
@@ -82,4 +82,8 @@
 
 项目收获：明白了活动组能支持多少功能，业务能力和业务边界。系统的扩展性，系统的稳定性，希望能看到你的一个快速成长的轨迹。设计模式的了解呢？对设计模式有了更深入的了解和实践。
 
+对业务拆分和业务边界有了一定的了解。
+
+## [架构](/images/自己画的架构.png)
+
 通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
