--- a/项目介绍.md
+++ b/项目介绍.md
@@ -84,6 +84,6 @@
 
 对业务拆分和业务边界有了一定的了解。
 
-## [架构](/images/自己画的架构.png)
+![架构](/images/自己画的架构.png)
 
 通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
