--- a/项目介绍.md
+++ b/项目介绍.md
@@ -33,6 +33,9 @@
 ##### 架构：
 1. 是与第三方的广告平台进行交互的。以callback和主动调取的形式。主要是点击数据的激活和获取。
 2. 同时等待客户端数据的上报到我们公司的用户数据。我的数据一方面回传给投放平台，一方面支持市场同学的数据需求。然后也支持大数据平台的建设，进行数据价值的分析。
+3. 支持大数据平台的数据建设，将数据的报表以及转化，以数据平台的形式，进行数据展示。
+4. ES 是用来进行日志的分析，以及接口请求量的变化，防止异常流量。
+5. 匹配成功的话，也记录了日志，能看到下载量和激活量的变化。
 
 ##### 功能细节：
 1. 提供一个https的接口，给广告平台。用户点击广告的时候，广告平台会以调用callback的形式调用我的接口。然后请求数据存储到redis 里面。
@@ -87,3 +90,5 @@
 ![架构](/images/自己画的架构.png)
 
 通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
+
+对基础功能的通用性，有了更多的考虑。
