--- a/项目介绍.md
+++ b/项目介绍.md
@@ -79,6 +79,8 @@
 拆分任务数和时间，给出项目排期推进项目上线。每天在群里公布项目进度。前期的项目拆分一定要细化，思维导图和甘特图。保证项目的推进。
 3. 对项目管理和，对于交易系统有了了解。
 4. 对数据库的认知：简历索引，数据优化。表啊，字段啊，怎么去优化。
+5. 对redis的优化使用，有了了解。
+
 
 ## 活动平台：
 模板化，和组件化，
