--- a/项目介绍.md
+++ b/项目介绍.md
@@ -91,6 +91,8 @@
 
 ![架构](/images/自己画的架构.png)
 
+##### 项目收获：
+
 通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
 
 对基础功能的通用性，有了更多的考虑。
