--- a/项目介绍.md
+++ b/项目介绍.md
@@ -58,6 +58,7 @@
 ##### 项目收货：
 1. 认识到了日志的作用，通过日志来监测异常流量，能快速定位问题。
 2. 分布式系统的稳定性，排查能力。还是bug问题。iOS突然减少，通过监测日志系统报警监控。es日志量iOS激活量抖降。PHP日志，没有异常，也没有慢请求。也没有500问题。然后定位是iOS客户端的问题。感觉了日志在工作中的重要性。日志可以用来统计报表，也能排查问题。提供排查问题思路。是在为整个分布式系统排查问题。通过日志的看板，来监控异常流量。一个是太多，一个是太少。
+3. 了解了微服务的概念了吧，了解清楚了职责，谁应该做什么事情。
 
 ##### 收获：
 先说收获，再说怎么排查问题。先看web 卡，还是MySQL卡，还是NGINX卡。性能问题，网络开销问题。熟悉框架，熟悉设计模式。稳定性以及bug的定位
@@ -96,3 +97,19 @@
 通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
 
 对基础功能的通用性，有了更多的考虑。
+
+## 说一下，你哪个项目做的比较久，收获比较大，效益比较好。
+1. 有几个人。后端一个，主要交互的对象，主要是第三方。
+2. 是什么形式的平台？就是提供接口，从广告过来的下载和订单。监控异常的流量和bug
+3. 协助大数据的建设。看板如何用数据，我这边的话，是通过elk然后来监测，
+4. 用到了几张数据表。
+5. 消息队列，
+6. NGINX    redis   rabbitmq   都是别人协助的，申请线上云机器的都是装好的。
+7. 开发机，所有的环境，都是大家共用的。我自己本地的环境，
+8.  fastcgi  和fpm的是什么？
+9.  遇到哪些难点？
+10.  抖降和陡增，是怎么解决的？  其实陡增的解决办法不太好？不能完全信赖对方？如何出解决方案，自己也应该有一个兜底。其实承受不了，太多的流量，在消息队列去做一个限流。其实应该你能承受多少，然后就去做限流。如何监控日志的异常。会登录日志的实时的分析。去看来自于那个接口，来自于哪个ip。
+11.  这个ip在这个小时内，请求了多少次。
+https://codante.org/blog/post/service-log-common-commands/
+9. 
+
