--- a/项目介绍.md
+++ b/项目介绍.md
@@ -1,3 +1,7 @@
+1. 承担什么角色。
+2. 合作的伙伴。
+3. 遇到什么问题，以及怎么解决，给自己带来哪些提升。解决的过程。不一定能遇到。怎么设计。说一下次序。有哦一个流程，没有过多的技巧。一般都不会出问题。没必要的给去掉。技术栈，比较多，一点，原理性的东西，多一点。不知道也无所谓。模板不要太粗糙。项目不要过多过长，主要做什么，技术栈。职责罗列出来。【职责】   里面涉及到redis  mqsql  mq   具体描述信息。。。中间遇到什么问题，怎么解决的。。自我赶感悟， 经历的感觉， 自己的成长，做几个， 就写几个。主要职责。说一下，自己遇到哪些问题，怎么解决的的，自我评价，评价， 好处。大家是怎么合作的。自己对未来的期望，对上一个总结，对未来的期望。不会看太多。说出自己的技术点。涉及到，技术栈，对应的redis  mq。引到到自己的项目使用中，为什么要用redis，为什么要用mq。而且， 遇到什么问题。整个通篇就很顺畅。很难对一个人，印象，很深刻。写的越多，越没用  那没什么卵用。自我评价，自我感悟，自己的上进心。然后不要写太多。精简点，一定要提炼出技术栈
+
 项目的效果和项目的需求：个人的收货和项目的效果。
 
 ## 活动平台的介绍：
@@ -24,10 +28,7 @@
 
 我叫王朝阳，2018年6月从长春理工大学的电子科学与技术专业毕业，学历是硕士。从事PHP有一年半的时间。18年6月校招去的广州棒骨科技有限公司，从事跨境电商的站点开发。然后18年11月来的北京快跑科技有限公司，主要从事投放统计的效果与追踪，做日常促销、节日活动活动，网安数据上报这一块的业务。
 
-
-
 #### 项目一：
-
 技术栈就不用说了，简历上面已经说了。不是平台，是业务。服务化的拆分。我的架构，一方面是业务需求，把广告投放这一块给独立出来，然后给广告平台去提供业务。
 
 ##### 架构：
@@ -81,6 +82,10 @@
 3. 对项目管理和，对于交易系统有了了解。
 4. 对数据库的认知：简历索引，数据优化。表啊，字段啊，怎么去优化。
 5. 对redis的优化使用，有了了解。
+6. 我们也有全链路追踪啊，我也可以看到系统的优化啊，我这边对问题的排查，也是有一定能力的啊？
+7. 对日志的排查使用，也是有一定的能力的。
+8. 我们也接入了CI/CD,然后对于快速迭代上线有了新的认识。
+9. 然后我们也接入了全链路追踪，然后对于问题的排查和性能的优化，有了全新的认识和理解。
 
 
 ## 活动平台：
@@ -97,6 +102,8 @@
 通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
 
 对基础功能的通用性，有了更多的考虑。
+
+
 
 ## 说一下，你哪个项目做的比较久，收获比较大，效益比较好。
 1. 有几个人。后端一个，主要交互的对象，主要是第三方。
