--- a/问题.md
+++ b/问题.md
@@ -12,3 +12,6 @@
 12. 我每次都是被面试官带着跑。
 13. 人家也总说，别老我问你，你自己说你擅长啥。
 14. 学习心得是什么呢？
+15. 针对于日志的分析，我每次都是说通过ELK来进行分析的，但是每次都问你不通过服务器去直接查看么？啊，我说我能查看啊，就是awk  | sort -n | uniq -c | sort -rn | wc -l | head -n 10.
+16. 每次也都会问问题排查，
+17. 也会考察一个设计的思路
