--- a/项目介绍.md
+++ b/项目介绍.md
@@ -56,6 +56,12 @@
 ##### 问题：这个系统有点糙。重复点击怎么办？
 点击了多少次，才能完成一次转化，这个事情怎么解决？大数据那边可以看到的啊。数据的挖掘。。。第一次没成功，第二次没成功。可以自己想一想。
 
+#### 如果要是做网络限流的话，其实我这边的东西就复杂了。
+比如限制对方的请求量，然后匹配逻辑那里，就复杂了。
+
+#### 也对对方做了一个权限的验证，进行了验签的操作。通过算法，给对方生成了唯一的appid和secretId。  然后加密的话，就是给对方生成了  验签的操作。而且，本身是通过sign去进行验证的
+
+
 ##### 项目收货：
 1. 认识到了日志的作用，通过日志来监测异常流量，能快速定位问题。
 2. 分布式系统的稳定性，排查能力。还是bug问题。iOS突然减少，通过监测日志系统报警监控。es日志量iOS激活量抖降。PHP日志，没有异常，也没有慢请求。也没有500问题。然后定位是iOS客户端的问题。感觉了日志在工作中的重要性。日志可以用来统计报表，也能排查问题。提供排查问题思路。是在为整个分布式系统排查问题。通过日志的看板，来监控异常流量。一个是太多，一个是太少。
