--- a/设计模式.md
+++ b/设计模式.md
@@ -33,3 +33,8 @@ final class Singleton
 
 template method 是继承关系，父类规定函数调用顺序，子类对各函数进行实现
 facade 是组合关系，facede 清楚组合进来的类函数调用顺序，这些类不需要继承
+
+## 3. 自己在项目中用到过的设计模式？
+1. 工厂模式
+2. 组合模式，这种情况下，减少了继承，组合的模式更加灵活【依赖注入】
+3. 观察者模式，这种还是用的比较多的， 因为涉及到异步处理，所以选择这种模式。
