--- a/项目介绍.md
+++ b/项目介绍.md
@@ -59,7 +59,16 @@
 #### 如果要是做网络限流的话，其实我这边的东西就复杂了。
 比如限制对方的请求量，然后匹配逻辑那里，就复杂了。
 
-#### 也对对方做了一个权限的验证，进行了验签的操作。通过算法，给对方生成了唯一的appid和secretId。  然后加密的话，就是给对方生成了  验签的操作。而且，本身是通过sign去进行验证的
+#### 自己项目的不足
+对于熔断，降级，自己这边其实是没有做的。导致自己这边还是有点问题的。没有考虑兜底的方案，也就是自己的服务不可用时，该如何去处理。
+
+是否加了服务 注册？发现治理？
+
+#### 其实也是可以最自己的项目  做些报警的
+1. 当日志中出现哪些错误的时候，可以使用钉钉去进行报警。
+
+#### 也对对方做了一个权限的验证，进行了验签的操作。
+通过算法，给对方生成了唯一的appid和secretId。  然后加密的话，就是给对方生成了  验签的操作。而且，本身是通过sign去进行验证的
 
 
 ##### 项目收货：
@@ -68,7 +77,12 @@
 3. 了解了微服务的概念了吧，了解清楚了职责，谁应该做什么事情。
 
 ##### 收获：
-先说收获，再说怎么排查问题。先看web 卡，还是MySQL卡，还是NGINX卡。性能问题，网络开销问题。熟悉框架，熟悉设计模式。稳定性以及bug的定位
+1. 先说收获，再说怎么排查问题。先看web 卡，还是MySQL卡，还是NGINX卡。性能问题，网络开销问题。熟悉框架，熟悉设计模式。稳定性以及bug的定位；
+2. 自己与各个广告渠道方进行沟通，体现了自己良好的交互能力。对于广告方不能支持的部分，自己这边能尽量去做兼容。因为大公司，不会因为业务主的一点点需求，而去进行改动。
+3. 自己这边能处理和接收海量上报的数据，包括点击数据，下载，注册，下单等消息，确保数据能够及时正常处理并存储，体现出自己的设计架构能力；
+4. 提供数据分析工具，自动分析上报数据。输出报表，提供投放效果数据支持，体现了自己对自己项目的做事态度；
+5. 支持大数据部门的BI看板建设， 体现出自己的负责任的态度。
+
 
 ## 项目二：
 功能：卖给用户，官网上面去进行售卖。运营创建活动，配置活动规则。
