--- a/项目设计.md
+++ b/项目设计.md
@@ -10,4 +10,28 @@
 1. 概率
 2. 时间场次
 3. 奖品
-4. 
+
+
+## 分布式发号器
+我咋设计？
+
+1. 首先他的功能是什么？
+   
+   提供一个全局唯一的id。
+2. 是有一个生成中心，然后所有的站点，都来生成中心，然后来获取么？
+
+
+解决办法：
+1. 使用hash分表。这种情况下，就是如果一个数据库突然挂了，或者新加一个机器，就会有问题。
+2. 雪花算法，这个东西，应该很难吧？
+3. 海波之前说过，是用go去mysql取，每次取1000个，等没有的话，再去数据库取。
+4. 龙哥之前说过的方案，也可以把？使用redis作为计数器，等redis中没有了，再使用分布式锁，再去mysql里面去取一下。
+5. 
+
+    SnowFlake产生的ID是一个64位的整型，结构如下（每一部分用“-”符号分隔）：
+    (1）1位：标识部分，在java中由于long的最高位是符号位，正数是0，负数是1，一般生成的ID为正数，所以为0；
+    （2）41位：时间戳部分，这个是毫秒级的时间，一般实现上不会存储当前的时间戳，而是时间戳的差值（当前时间-固定的开始时间），这样可以使产生的ID从更小值开始；41位的时间戳可以使用69年，(1L << 41) / (1000L * 60 * 60 * 24 * 365) = 69年；
+    （3）10位：节点部分，Twitter实现中使用前5位作为数据中心标识，后5位作为机器标识，可以部署1024个节点；
+    （4）12位：序列号部分，支持同一毫秒内同一个节点可以生成4096个ID；
+
+
