--- a/项目介绍.md
+++ b/项目介绍.md
@@ -4,23 +4,23 @@
 
 项目的效果和项目的需求：个人的收货和项目的效果。
 
-## 活动平台的介绍：
+# 活动平台的介绍：
 1. 有一张活动表，他用来记录活动的基本信息：活动id，创建人，创建时间，活动名称，修改时间等等，活动状态。
 2. 有一张 组件表，记录活动使用了哪些组件，以及组件的一些配置。【活动的一些背景色等信息】
 3. 不同的组件，需要使用不同的表进行存储。比如房源组表【记录的是房源属于哪些城市的一个表】还有一个房源表【记录城市下边的房源信息】。领券的话，会有一个组件，券包关联的表，用户领完券，会给用户发相应的券。 
 
-#### 具体表的设计：
+### 具体表的设计：
 以房源上传组件为例：
 1. 先创建活动，保存活动的基本信息，比如创建人，创建时间，活动状态。
 2. 在这个活动上面，添加房源上传的组件。组件表用来保存包括一些组件的基本信息。比如房源展示数量，排列布局配置等信息。
 3. 上传房源，有一个房源组表，用来保存房源城市信息。
 4. 还有一个房源表，用来上传城市下面的房源。【房源表和房源组表，是一对多的关系，每个城市下面，可以对应多套房源】
 
-##  说一下，你觉得有技术难点的项目
+#  说一下，你觉得有技术难点的项目
 您觉得我的项目里面，哪一个可以提升复杂度？
 
 
-## 自己介绍自己的项目：
+# 自己介绍自己的项目：
 
 做项目：一定要有逻辑能力。
 
@@ -28,17 +28,17 @@
 
 我叫王朝阳，2018年6月从长春理工大学的电子科学与技术专业毕业，学历是硕士。从事PHP有一年半的时间。18年6月校招去的广州棒骨科技有限公司，从事跨境电商的站点开发。然后18年11月来的北京快跑科技有限公司，主要从事投放统计的效果与追踪，做日常促销、节日活动活动，网安数据上报这一块的业务。
 
-#### 项目一：
+### 项目一：
 技术栈就不用说了，简历上面已经说了。不是平台，是业务。服务化的拆分。我的架构，一方面是业务需求，把广告投放这一块给独立出来，然后给广告平台去提供业务。
 
-##### 架构：
+#### 架构：
 1. 是与第三方的广告平台进行交互的。以callback和主动调取的形式。主要是点击数据的激活和获取。
 2. 同时等待客户端数据的上报到我们公司的用户数据。我的数据一方面回传给投放平台，一方面支持市场同学的数据需求。然后也支持大数据平台的建设，进行数据价值的分析。
 3. 支持大数据平台的数据建设，将数据的报表以及转化，以数据平台的形式，进行数据展示。
 4. ES 是用来进行日志的分析，以及接口请求量的变化，防止异常流量。
 5. 匹配成功的话，也记录了日志，能看到下载量和激活量的变化。
 
-##### 功能细节：
+#### 功能细节：
 1. 提供一个https的接口，给广告平台。用户点击广告的时候，广告平台会以调用callback的形式调用我的接口。然后请求数据存储到redis 里面。
 2. 用户下载客户端之后，会上报给用户中心，然后用户以mq的形式，发送消息。
 3. 我这边监听消息，然后去redis里面进行数据匹配，然后匹配成功后，回传给广告平台，并存储到数据库。
@@ -47,36 +47,36 @@
 6. ES 是用来进行日志的分析，以及接口请求量的变化，防止异常流量。
 7. 匹配成功的话，也记录了日志，能看到下载量和激活量的变化。
 
-##### 难点，
+#### 难点，
 1. 限制大量请求。
 2. 检测，异常流量下降
 
 先说，数据怎么流转，别人怎么调用你，你怎么调用别人，然后再说你的qps是多少，
 
-##### 问题：这个系统有点糙。重复点击怎么办？
+#### 问题：这个系统有点糙。重复点击怎么办？
 点击了多少次，才能完成一次转化，这个事情怎么解决？大数据那边可以看到的啊。数据的挖掘。。。第一次没成功，第二次没成功。可以自己想一想。
 
-#### 如果要是做网络限流的话，其实我这边的东西就复杂了。
+### 如果要是做网络限流的话，其实我这边的东西就复杂了。
 比如限制对方的请求量，然后匹配逻辑那里，就复杂了。
 
-#### 自己项目的不足
+### 自己项目的不足
 对于熔断，降级，自己这边其实是没有做的。导致自己这边还是有点问题的。没有考虑兜底的方案，也就是自己的服务不可用时，该如何去处理。
 
 是否加了服务 注册？发现治理？
 
-#### 其实也是可以最自己的项目  做些报警的
+### 其实也是可以最自己的项目  做些报警的
 1. 当日志中出现哪些错误的时候，可以使用钉钉去进行报警。
 
-#### 也对对方做了一个权限的验证，进行了验签的操作。
+### 也对对方做了一个权限的验证，进行了验签的操作。
 通过算法，给对方生成了唯一的appid和secretId。  然后加密的话，就是给对方生成了  验签的操作。而且，本身是通过sign去进行验证的
 
 
-##### 项目收货：
+#### 项目收货：
 1. 认识到了日志的作用，通过日志来监测异常流量，能快速定位问题。
 2. 分布式系统的稳定性，排查能力。还是bug问题。iOS突然减少，通过监测日志系统报警监控。es日志量iOS激活量抖降。PHP日志，没有异常，也没有慢请求。也没有500问题。然后定位是iOS客户端的问题。感觉了日志在工作中的重要性。日志可以用来统计报表，也能排查问题。提供排查问题思路。是在为整个分布式系统排查问题。通过日志的看板，来监控异常流量。一个是太多，一个是太少。
 3. 了解了微服务的概念了吧，了解清楚了职责，谁应该做什么事情。
 
-##### 收获：
+#### 收获：
 1. 先说收获，再说怎么排查问题。先看web 卡，还是MySQL卡，还是NGINX卡。性能问题，网络开销问题。熟悉框架，熟悉设计模式。稳定性以及bug的定位；
 2. 自己与各个广告渠道方进行沟通，体现了自己良好的交互能力。对于广告方不能支持的部分，自己这边能尽量去做兼容。因为大公司，不会因为业务主的一点点需求，而去进行改动。
 3. 自己这边能处理和接收海量上报的数据，包括点击数据，下载，注册，下单等消息，确保数据能够及时正常处理并存储，体现出自己的设计架构能力；
@@ -84,7 +84,7 @@
 5. 支持大数据部门的BI看板建设， 体现出自己的负责任的态度。
 
 
-## 项目二：
+# 项目二：
 功能：卖给用户，官网上面去进行售卖。运营创建活动，配置活动规则。
 
 1. 前端调用活动平台，活动平台调用支付，生成唯一的paycode码。
@@ -95,7 +95,7 @@
 
 我们也用了xphrof去进行性能的优化。
 
-##### 项目收货：
+#### 项目收货：
 1. 自己担任项目经历，提升了跨项目组的团队协作能力。
 2. 如何保证项目的进度呢？
 拆分任务数和时间，给出项目排期推进项目上线。每天在群里公布项目进度。前期的项目拆分一定要细化，思维导图和甘特图。保证项目的推进。
@@ -108,7 +108,7 @@
 9. 然后我们也接入了全链路追踪，然后对于问题的排查和性能的优化，有了全新的认识和理解。
 
 
-## 活动平台：
+# 活动平台：
 模板化，和组件化，
 
 项目收获：明白了活动组能支持多少功能，业务能力和业务边界。系统的扩展性，系统的稳定性，希望能看到你的一个快速成长的轨迹。设计模式的了解呢？对设计模式有了更深入的了解和实践。
@@ -117,7 +117,7 @@
 
 ![架构](/images/自己画的架构.png)
 
-##### 项目收获：
+#### 项目收获：
 
 通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
 
@@ -125,7 +125,7 @@
 
 
 
-## 说一下，你哪个项目做的比较久，收获比较大，效益比较好。
+# 说一下，你哪个项目做的比较久，收获比较大，效益比较好。
 1. 有几个人。后端一个，主要交互的对象，主要是第三方。
 2. 是什么形式的平台？就是提供接口，从广告过来的下载和订单。监控异常的流量和bug
 3. 协助大数据的建设。看板如何用数据，我这边的话，是通过elk然后来监测，
