--- a/项目介绍.md
+++ b/项目介绍.md
@@ -1,35 +1,34 @@
+# 自我介绍：
+我叫王朝阳，2018年6月从长春理工大学的电子科学与技术专业毕业，学历是硕士。从事PHP有一年半的时间。18年6月校招去的广州棒骨科技有限公司，从事跨境电商的站点开发。然后18年11月来的北京快跑科技有限公司，主要从事投放统计的效果与追踪，做日常促销、节日活动活动，网安数据上报这一块的业务。
+
+# 项目介绍逻辑-v1：
 1. 承担什么角色。
 2. 合作的伙伴。
 3. 遇到什么问题，以及怎么解决，给自己带来哪些提升。解决的过程。不一定能遇到。怎么设计。说一下次序。有哦一个流程，没有过多的技巧。一般都不会出问题。没必要的给去掉。技术栈，比较多，一点，原理性的东西，多一点。不知道也无所谓。模板不要太粗糙。项目不要过多过长，主要做什么，技术栈。职责罗列出来。【职责】   里面涉及到redis  mqsql  mq   具体描述信息。。。中间遇到什么问题，怎么解决的。。自我赶感悟， 经历的感觉， 自己的成长，做几个， 就写几个。主要职责。说一下，自己遇到哪些问题，怎么解决的的，自我评价，评价， 好处。大家是怎么合作的。自己对未来的期望，对上一个总结，对未来的期望。不会看太多。说出自己的技术点。涉及到，技术栈，对应的redis  mq。引到到自己的项目使用中，为什么要用redis，为什么要用mq。而且， 遇到什么问题。整个通篇就很顺畅。很难对一个人，印象，很深刻。写的越多，越没用  那没什么卵用。自我评价，自我感悟，自己的上进心。然后不要写太多。精简点，一定要提炼出技术栈
+4. 项目的效果和项目的需求：个人的收货和项目的效果。
 
-项目的效果和项目的需求：个人的收货和项目的效果。
+# 如何介绍一个项目-v2：
+1. 职责
+2. 技术
+3. 收益/贡献
 
-# 活动平台的介绍：
-1. 有一张活动表，他用来记录活动的基本信息：活动id，创建人，创建时间，活动名称，修改时间等等，活动状态。
-2. 有一张 组件表，记录活动使用了哪些组件，以及组件的一些配置。【活动的一些背景色等信息】
-3. 不同的组件，需要使用不同的表进行存储。比如房源组表【记录的是房源属于哪些城市的一个表】还有一个房源表【记录城市下边的房源信息】。领券的话，会有一个组件，券包关联的表，用户领完券，会给用户发相应的券。 
-
-### 具体表的设计：
-以房源上传组件为例：
-1. 先创建活动，保存活动的基本信息，比如创建人，创建时间，活动状态。
-2. 在这个活动上面，添加房源上传的组件。组件表用来保存包括一些组件的基本信息。比如房源展示数量，排列布局配置等信息。
-3. 上传房源，有一个房源组表，用来保存房源城市信息。
-4. 还有一个房源表，用来上传城市下面的房源。【房源表和房源组表，是一对多的关系，每个城市下面，可以对应多套房源】
-
-#  说一下，你觉得有技术难点的项目
-您觉得我的项目里面，哪一个可以提升复杂度？
-
+可以按这个思路，再挖掘些技术点。话术上调整下
 
 # 自己介绍自己的项目：
 
 做项目：一定要有逻辑能力。
 
 1. 面试官让介绍自己的项目，为项目中有什么难点？其实是想问你跟别人的不同点，这是初衷。所有人都差不多，得让面试官看到你的优缺点吧。你能不能主动思考问题。喜不喜欢回顾，喜不喜欢总结？
+2. "依据各个广告平台的接口文档，进行公司账号的配置；"。面试官感觉：就是看文档写接口，有啥好说的。改：与第三方广告平台对接，接入投放统计平台。这样写能体现出咱们的沟通协调能力，你不可能只看，文档，你需要和他沟通对吧。
+3. 对市场投放同学提供脚本数据支持，以方便其对合作方进行业务结算，以及进行投放计划；
+   这条也可以写的更高些，不是脚本，至少只一个完整的工具能输出报表，提供投放效果数据支持
+   1、体现我们做事的完整性，有头有尾，不光采集数据，还有分析、展现，工作态度很好。
+   2、“提供投放效果数据支持”这句话，说明我们思路很清楚，知道做每件事的目的
 
-我叫王朝阳，2018年6月从长春理工大学的电子科学与技术专业毕业，学历是硕士。从事PHP有一年半的时间。18年6月校招去的广州棒骨科技有限公司，从事跨境电商的站点开发。然后18年11月来的北京快跑科技有限公司，主要从事投放统计的效果与追踪，做日常促销、节日活动活动，网安数据上报这一块的业务。
-
-### 项目一：
+# 项目一：
 技术栈就不用说了，简历上面已经说了。不是平台，是业务。服务化的拆分。我的架构，一方面是业务需求，把广告投放这一块给独立出来，然后给广告平台去提供业务。
+
+这个项目的问题主要在于存储选型上。大量实时数据写入，没有更新、几乎没有查询（统一分析一次）用MySQL是否合适，什么存储合适，这个你要想明白，而且要说明白现在为什么用MySQL（受公司实际情况限制等等）
 
 #### 架构：
 1. 是与第三方的广告平台进行交互的。以callback和主动调取的形式。主要是点击数据的激活和获取。
@@ -56,20 +55,19 @@
 #### 问题：这个系统有点糙。重复点击怎么办？
 点击了多少次，才能完成一次转化，这个事情怎么解决？大数据那边可以看到的啊。数据的挖掘。。。第一次没成功，第二次没成功。可以自己想一想。
 
-### 如果要是做网络限流的话，其实我这边的东西就复杂了。
+#### 如果要是做网络限流的话，其实我这边的东西就复杂了。
 比如限制对方的请求量，然后匹配逻辑那里，就复杂了。
 
-### 自己项目的不足
+#### 自己项目的不足
 对于熔断，降级，自己这边其实是没有做的。导致自己这边还是有点问题的。没有考虑兜底的方案，也就是自己的服务不可用时，该如何去处理。
 
 是否加了服务 注册？发现治理？
 
-### 其实也是可以最自己的项目  做些报警的
+#### 其实也是可以最自己的项目  做些报警的
 1. 当日志中出现哪些错误的时候，可以使用钉钉去进行报警。
 
-### 也对对方做了一个权限的验证，进行了验签的操作。
+#### 也对对方做了一个权限的验证，进行了验签的操作。
 通过算法，给对方生成了唯一的appid和secretId。  然后加密的话，就是给对方生成了  验签的操作。而且，本身是通过sign去进行验证的
-
 
 #### 项目收货：
 1. 认识到了日志的作用，通过日志来监测异常流量，能快速定位问题。
@@ -83,8 +81,35 @@
 4. 提供数据分析工具，自动分析上报数据。输出报表，提供投放效果数据支持，体现了自己对自己项目的做事态度；
 5. 支持大数据部门的BI看板建设， 体现出自己的负责任的态度。
 
+#### 如果面试官问道抗压能力
+面试官要是问到压力情况的时候你心里要有数。系统现在能抗多大的压力，预期现在的流量增长水平能支撑多久（半年或1年）；有改进的方案，已经考虑引入新的存储等等。为什么用MySQL，项目时间紧张，只有MySQL，前期先上线，满足功能，再去优化。
 
-# 项目二：
+# 项目二：活动平台的介绍：
+1. 有一张活动表，他用来记录活动的基本信息：活动id，创建人，创建时间，活动名称，修改时间等等，活动状态。
+2. 有一张 组件表，记录活动使用了哪些组件，以及组件的一些配置。【活动的一些背景色等信息】
+3. 不同的组件，需要使用不同的表进行存储。比如房源组表【记录的是房源属于哪些城市的一个表】还有一个房源表【记录城市下边的房源信息】。领券的话，会有一个组件，券包关联的表，用户领完券，会给用户发相应的券。 
+
+#### 具体表的设计：
+以房源上传组件为例：
+1. 先创建活动，保存活动的基本信息，比如创建人，创建时间，活动状态。
+2. 在这个活动上面，添加房源上传的组件。组件表用来保存包括一些组件的基本信息。比如房源展示数量，排列布局配置等信息。
+3. 上传房源，有一个房源组表，用来保存房源城市信息。
+4. 还有一个房源表，用来上传城市下面的房源。【房源表和房源组表，是一对多的关系，每个城市下面，可以对应多套房源】
+
+#### 项目收获：
+模板化，和组件化，
+
+项目收获：明白了活动组能支持多少功能，业务能力和业务边界。系统的扩展性，系统的稳定性，希望能看到你的一个快速成长的轨迹。设计模式的了解呢？对设计模式有了更深入的了解和实践。
+
+对业务拆分和业务边界有了一定的了解。
+
+![架构](/images/自己画的架构.png)
+
+通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
+
+对基础功能的通用性，有了更多的考虑。
+
+# 项目三-权益售卖系统：
 功能：卖给用户，官网上面去进行售卖。运营创建活动，配置活动规则。
 
 1. 前端调用活动平台，活动平台调用支付，生成唯一的paycode码。
@@ -107,21 +132,6 @@
 8. 我们也接入了CI/CD,然后对于快速迭代上线有了新的认识。
 9. 然后我们也接入了全链路追踪，然后对于问题的排查和性能的优化，有了全新的认识和理解。
 
-
-# 活动平台：
-模板化，和组件化，
-
-项目收获：明白了活动组能支持多少功能，业务能力和业务边界。系统的扩展性，系统的稳定性，希望能看到你的一个快速成长的轨迹。设计模式的了解呢？对设计模式有了更深入的了解和实践。
-
-对业务拆分和业务边界有了一定的了解。
-
-![架构](/images/自己画的架构.png)
-
-#### 项目收获：
-
-通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
-
-对基础功能的通用性，有了更多的考虑。
 
 
 
