--- a/项目介绍.md
+++ b/项目介绍.md
@@ -84,6 +84,12 @@
 #### 如果面试官问道抗压能力
 面试官要是问到压力情况的时候你心里要有数。系统现在能抗多大的压力，预期现在的流量增长水平能支撑多久（半年或1年）；有改进的方案，已经考虑引入新的存储等等。为什么用MySQL，项目时间紧张，只有MySQL，前期先上线，满足功能，再去优化。
 
+这块你要先说下选型的思路，结合自己业务场景，写多读少，想选择写入性能高的存储。正在调研：mongo、pika还在找一些其它的KV存储。后续会写测试用例模拟我们的场景去测试选型
+
+你可以说，这块是自己主动在搞，公司还没有重视起来，自己再挤时间搞，能体现你对技术的追求和责任心。
+
+对于系统的问题：重复数据上报， 对方灌水的情况，自己一直在寻找方案，也做了一定的鉴权，但是目前还没有好的方法呢？可以反问面试官，您有好的建议么?
+
 # 项目二：活动平台的介绍：
 1. 有一张活动表，他用来记录活动的基本信息：活动id，创建人，创建时间，活动名称，修改时间等等，活动状态。
 2. 有一张 组件表，记录活动使用了哪些组件，以及组件的一些配置。【活动的一些背景色等信息】
