--- a/问题.md
+++ b/问题.md
@@ -5,13 +5,12 @@
 5. 人家问我有难点的项目，我自己总是回答不好。
 6. 我现在有点病急乱投医。
 7. 也不能说完全浪费了  十多次的面试机会，我是觉得自己也得到了进步。现在就是有一个百度四面了，但是四面的时候，人家问我，有难点的项目，我自己并没有回答好。现在就是这个在等消息了
-8. 我觉得PHP的话，还是薪资低的，我要18k 基本就是没有消息了。
+8. 我觉得PHP的话，还是薪资低的。
 9. 以及未来以后的发展，我现在有点困惑，在极客时间上面学习，有些基础知识的吧，见效慢，高并发的话，看看吧，但是自己并没有经历。也是难。往上还是往下。
 10. 有一个好未来的面试，人家说谈谈你，有难点的项目，我说好像没有吧，人家想跟我聊，但是我就有点没懂意思，没跟人家聊啊。但是感觉自己就是在业务上面，弄了一下啊。
 11. 然后还有就是自己以后的发展吧
 12. 我每次都是被面试官带着跑。
 13. 人家也总说，别老我问你，你自己说你擅长啥。
 14. 学习心得是什么呢？
-15. 针对于日志的分析，我每次都是说通过ELK来进行分析的，但是每次都问你不通过服务器去直接查看么？啊，我说我能查看啊，就是awk  | sort -n | uniq -c | sort -rn | wc -l | head -n 10.
 16. 每次也都会问问题排查，
 17. 也会考察一个设计的思路
