--- a/项目介绍.md
+++ b/项目介绍.md
@@ -45,43 +45,27 @@
 5. 支持大数据平台的数据建设，将数据的报表以及转化，以数据平台的形式，进行数据展示。
 6. ES 是用来进行日志的分析，以及接口请求量的变化，防止异常流量。
 7. 匹配成功的话，也记录了日志，能看到下载量和激活量的变化。
-
+8. 通过算法，给对方生成了唯一的appid和secretId。  然后加密的话，就是给对方生成了  验签的操作。而且，本身是通过sign去进行验证的
 #### 难点，
 1. 限制大量请求。
 2. 检测，异常流量下降
 
-先说，数据怎么流转，别人怎么调用你，你怎么调用别人，然后再说你的qps是多少，
-
-#### 问题：这个系统有点糙。重复点击怎么办？
-点击了多少次，才能完成一次转化，这个事情怎么解决？大数据那边可以看到的啊。数据的挖掘。。。第一次没成功，第二次没成功。可以自己想一想。
-
-#### 如果要是做网络限流的话，其实我这边的东西就复杂了。
-比如限制对方的请求量，然后匹配逻辑那里，就复杂了。
+先说，数据怎么流转，别人怎么调用你，你怎么调用别人，然后再说你的qps是多少，这个系统有点糙。重复点击怎么办？点击了多少次，才能完成一次转化，这个事情怎么解决？大数据那边可以看到的啊。数据的挖掘。。。第一次没成功，第二次没成功。可以自己想一想。比如限制对方的请求量，然后匹配逻辑那里，就复杂了。
 
 #### 自己项目的不足
-对于熔断，降级，自己这边其实是没有做的。导致自己这边还是有点问题的。没有考虑兜底的方案，也就是自己的服务不可用时，该如何去处理。
-
-是否加了服务 注册？发现治理？
-
-#### 其实也是可以最自己的项目  做些报警的
-1. 当日志中出现哪些错误的时候，可以使用钉钉去进行报警。
-
-#### 也对对方做了一个权限的验证，进行了验签的操作。
-通过算法，给对方生成了唯一的appid和secretId。  然后加密的话，就是给对方生成了  验签的操作。而且，本身是通过sign去进行验证的
+对于熔断，降级，自己这边其实是没有做的。导致自己这边还是有点问题的。没有考虑兜底的方案，也就是自己的服务不可用时，该如何去处理。是否加了服务 注册？发现治理？当日志中出现哪些错误的时候，可以使用钉钉去进行报警。
 
 #### 项目收货：
 1. 认识到了日志的作用，通过日志来监测异常流量，能快速定位问题。
 2. 分布式系统的稳定性，排查能力。还是bug问题。iOS突然减少，通过监测日志系统报警监控。es日志量iOS激活量抖降。PHP日志，没有异常，也没有慢请求。也没有500问题。然后定位是iOS客户端的问题。感觉了日志在工作中的重要性。日志可以用来统计报表，也能排查问题。提供排查问题思路。是在为整个分布式系统排查问题。通过日志的看板，来监控异常流量。一个是太多，一个是太少。
 3. 了解了微服务的概念了吧，了解清楚了职责，谁应该做什么事情。
-
-#### 收获：
 1. 先说收获，再说怎么排查问题。先看web 卡，还是MySQL卡，还是NGINX卡。性能问题，网络开销问题。熟悉框架，熟悉设计模式。稳定性以及bug的定位；
 2. 自己与各个广告渠道方进行沟通，体现了自己良好的交互能力。对于广告方不能支持的部分，自己这边能尽量去做兼容。因为大公司，不会因为业务主的一点点需求，而去进行改动。
 3. 自己这边能处理和接收海量上报的数据，包括点击数据，下载，注册，下单等消息，确保数据能够及时正常处理并存储，体现出自己的设计架构能力；
 4. 提供数据分析工具，自动分析上报数据。输出报表，提供投放效果数据支持，体现了自己对自己项目的做事态度；
-5. 支持大数据部门的BI看板建设， 体现出自己的负责任的态度。
+5. 支持大数据部门的BI看板建设， 体现出自己为公司多做的思考。
 
-#### 如果面试官问道抗压能力
+#### 如果面试官问道系统抗压能力
 面试官要是问到压力情况的时候你心里要有数。系统现在能抗多大的压力，预期现在的流量增长水平能支撑多久（半年或1年）；有改进的方案，已经考虑引入新的存储等等。为什么用MySQL，项目时间紧张，只有MySQL，前期先上线，满足功能，再去优化。
 
 这块你要先说下选型的思路，结合自己业务场景，写多读少，想选择写入性能高的存储。正在调研：mongo、pika还在找一些其它的KV存储。后续会写测试用例模拟我们的场景去测试选型
@@ -91,6 +75,8 @@
 对于系统的问题：重复数据上报， 对方灌水的情况，自己一直在寻找方案，也做了一定的鉴权，但是目前还没有好的方法呢？可以反问面试官，您有好的建议么?
 
 # 项目二：活动平台的介绍：
+活动平台简化配置流程，结合基础活动组件，生成模板类活动。打造丰富可靠的活动模板，提供活动整体的开发效率。
+
 1. 有一张活动表，他用来记录活动的基本信息：活动id，创建人，创建时间，活动名称，修改时间等等，活动状态。
 2. 有一张 组件表，记录活动使用了哪些组件，以及组件的一些配置。【活动的一些背景色等信息】
 3. 不同的组件，需要使用不同的表进行存储。比如房源组表【记录的是房源属于哪些城市的一个表】还有一个房源表【记录城市下边的房源信息】。领券的话，会有一个组件，券包关联的表，用户领完券，会给用户发相应的券。 
@@ -103,18 +89,9 @@
 4. 还有一个房源表，用来上传城市下面的房源。【房源表和房源组表，是一对多的关系，每个城市下面，可以对应多套房源】
 
 #### 项目收获：
-模板化，和组件化，
+模板化，和组件化，明白了活动组能支持多少功能，业务能力和业务边界。系统的扩展性，系统的稳定性，希望能看到你的一个快速成长的轨迹。设计模式的了解呢？对设计模式有了更深入的了解和实践。对业务拆分和业务边界有了一定的了解。通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。对基础功能的通用性，有了更多的考虑。
 
-项目收获：明白了活动组能支持多少功能，业务能力和业务边界。系统的扩展性，系统的稳定性，希望能看到你的一个快速成长的轨迹。设计模式的了解呢？对设计模式有了更深入的了解和实践。
-
-对业务拆分和业务边界有了一定的了解。
-
-![架构](/images/自己画的架构.png)
-
-通过公司的链路追踪，然后去进行性能的优化啊。还有就是代码静态检查，提升自己的代码的质量。减少坏代码的数量。展开敏捷开发，提高了开发上线的效率。
-
-对基础功能的通用性，有了更多的考虑。
-
+![架构](images/自己画的架构.png)
 # 项目三-权益售卖系统：
 功能：卖给用户，官网上面去进行售卖。运营创建活动，配置活动规则。
 
@@ -137,9 +114,6 @@
 7. 对日志的排查使用，也是有一定的能力的。
 8. 我们也接入了CI/CD,然后对于快速迭代上线有了新的认识。
 9. 然后我们也接入了全链路追踪，然后对于问题的排查和性能的优化，有了全新的认识和理解。
-
-
-
 
 # 说一下，你哪个项目做的比较久，收获比较大，效益比较好。
 1. 有几个人。后端一个，主要交互的对象，主要是第三方。
