--- a/算法题.md
+++ b/算法题.md
@@ -113,3 +113,18 @@ $nums2 = [3, 4];
 
 print_r($result->findMedianSortedArrays($nums1, $nums2));
 ```
+# 算法题，100元红包，分给10个人，没人金额在8-12元之间
+先分给没人8元，然后再随机跟每个用户分钱。这种方式还是比较简单和粗暴的。
+```
+<?php
+$cash = 20;
+$user_arr = array(8,8,8,8,8,8,8,8,8,8);
+while($cash>0){
+    $user_id = rand(0, 9);
+    if($user_arr[$user_id]<12){
+        $user_arr[$user_id]++;
+        $cash--;
+    }
+}
+var_dump($user_arr,array_sum($user_arr));die;
+```
