--- a/算法题.md
+++ b/算法题.md
@@ -128,3 +128,86 @@ while($cash>0){
 }
 var_dump($user_arr,array_sum($user_arr));die;
 ```
+
+# 翻转链表
+
+````
+/**
+ * Definition for a singly-linked list.
+ * class ListNode {
+ *     public $val = 0;
+ *     public $next = null;
+ *     function __construct($val) { $this->val = $val; }
+ * }
+ */
+class Solution {
+
+    /**
+     * @param ListNode $head
+     * @return ListNode
+     */
+    function reverseList($head) {
+        if (empty($head) || empty($head->next)) return $head;
+        $p = $this->reverseList($head->next);
+        $head->next->next = $head;
+        $head->next = null;
+        return $p;
+    }
+}
+````
+
+
+# 已知一随机发生器，产生0的概率是P，产生1的概率是1-P。现在需要构造一个发生器，使得它构造0和1的概率均为1/2，请写出思路或伪代码 
+````
+由于需要产生1/2，而用1位0，或1位1无法产生等概率，因此，考虑将随机数扩展成2位：
+
+00   p*p
+
+01  p*(1-p)
+
+10  (1-p)*p
+
+11 (1-p)*(1-p)
+
+有上述分析知道，01和10是等概率的，因此我们只需要产生01和10就行了。于是可以，遇到00和11就丢弃，只记录01和10。可以令，01表示0,10表示1，则等概率1/2产生0和1了。
+````
+
+# 求解最大的k个数。
+
+
+# 求解两个有序数据里面，是否有相同的元素，不允许用php函数。
+
+# 求解1的个数
+````
+<?php
+function getbit($nums) {
+    $bits = 0;
+    $mask = 1;
+    for ($i = 0; $i < 32; $i++) {
+        if (($nums & $mask) != 0) {
+            $bits++;
+        }
+        $mask <<= 1;
+    }
+    return $bits;
+}
+
+function getBit2($nums) {
+    $sum = 0;
+    while ($n != 0) {
+        sum++;
+        $n &= ($n - 1);
+    }
+    return $sum;
+}
+
+var_dump(getbit(12));
+````
+
+# 有1999个球，甲乙两人轮流取，每人每次可取1---4个，去到最后一个球者为输，如果甲先取，怎样才能获胜？
+````
+1999÷（1+4）
+=1999÷5
+=399…4
+````
+答：甲先拿4个，然后看乙拿几个，甲拿的球数与乙拿的和是5，甲一定胜利．
