--- a/项目设计.md
+++ b/项目设计.md
@@ -33,5 +33,29 @@
     （2）41位：时间戳部分，这个是毫秒级的时间，一般实现上不会存储当前的时间戳，而是时间戳的差值（当前时间-固定的开始时间），这样可以使产生的ID从更小值开始；41位的时间戳可以使用69年，(1L << 41) / (1000L * 60 * 60 * 24 * 365) = 69年；
     （3）10位：节点部分，Twitter实现中使用前5位作为数据中心标识，后5位作为机器标识，可以部署1024个节点；
     （4）12位：序列号部分，支持同一毫秒内同一个节点可以生成4096个ID；
+    
+# 执行下线的操作，每次10000条数据，然后去操作下线，说说你的设计想法？其实就是通过一个请求将1w条数据弄到数据库里面？以及如何返回数据。
+
+主要存在的问题，接口连接超时的问题。
+
+什么时候提交，什么时候处理，什么时候反馈给运营方。主要是会有NGINX超时的问题。
+
+主要考察点，怎么拆分，怎么入库，怎么异步处理数据，怎么反馈给前端。这样一个流畅的功能。
+
+1. 如何去做表的拆分和处理，如何去触发。怎么处理这批数据，如何反馈给运营方。就是一个思路
+
+1. 文件如何存储。这1w条数据存储到数据库里面。
+2. 如何设计表。字段的选择也是一个考点，比如1w条数据，可以每20条存储一次。
+3. 如何异步处理这批数据，比如完成下线的操作。
+4. 如何返回给客户端。
+
+
+
+1. 入库
+2. 分表
+3. 异步处理，处理完，掉接口，返回值处理。
+
+这设计个啥？把id传过来，立马入 redis ，或者入mq，返回个提示，然后搞个请求监听结果  可以是tcp 或者轮询（弄个等待时间，没有返回放弃，等待刷新）。后台开启个进程，处理，处理一个 存储一个，并修改 通知显示的数据
+
 
 
