--- a/项目介绍.md
+++ b/项目介绍.md
@@ -46,6 +46,7 @@
 6. ES 是用来进行日志的分析，以及接口请求量的变化，防止异常流量。
 7. 匹配成功的话，也记录了日志，能看到下载量和激活量的变化。
 8. 通过算法，给对方生成了唯一的appid和secretId。  然后加密的话，就是给对方生成了  验签的操作。而且，本身是通过sign去进行验证的
+
 #### 难点，
 1. 限制大量请求。
 2. 检测，异常流量下降
@@ -64,6 +65,21 @@
 3. 自己这边能处理和接收海量上报的数据，包括点击数据，下载，注册，下单等消息，确保数据能够及时正常处理并存储，体现出自己的设计架构能力；
 4. 提供数据分析工具，自动分析上报数据。输出报表，提供投放效果数据支持，体现了自己对自己项目的做事态度；
 5. 支持大数据部门的BI看板建设， 体现出自己为公司多做的思考。
+6. 加入了单元测试。
+
+#### 项目难点
+1. 针对于分库分表：我们现在还能抗的住。跟时间强相关，一个月以前的数据价值可能就不太大了。分区可以考虑的。跟业务绑定的方案。业务不是很要命。按主键去拆。按时间去拆会比较合理。mysql分库分表。日志数据，时间归档。partition。
+2. 生产者挂了怎么办？（这个东西，不是我做的，随机应变的能力，生产端挂了怎么办。）数据不丢，在日志里面，我通过日志可以找回来的，我是通过我的上游看到流量的异常。自己的报警。   自己有自己的监控。因为我没有做过，不能推给面试官。我们的方案是否ok。去多个维度去想。
+3. redis 非强一致性。集群这种方案，挂了这一瞬间的数据，是无法做到数据一致性的。但是我这边其实是允许丢数据的。把你的思维放开。技术方面，不要退缩。我的方案怎么样。这个业务是否合理。分别是哪一类的问题。业务这种。redis本来就不是cp，在业务上，我就是ap。
+4. 首先分析并发高，是不是正常，我不应该拦截。接入层的一个高并发的方案。我就应该支持1000w。这个是一个方案。从机器从性能去讲。恶意点击，我是通过用户行为去去重。风控的策略，布隆过滤器。
+5. 多个渠道，直接去干掉。我其实是可以干掉一些渠道的。【我这边就真实遇到过】
+7. 从监控。兜底，假如出了异常，我能不能恢复。
+8. 恶意流量识别。布隆过滤器。
+9. 是不是归档到我的数据平台去。归档过程也是一种数据方案。
+10. redis 这边一定要强化。
+11. 风控这个层面，根据ip去说。
+12. 针对数据丢失的情况，我这边就是通过日志去过滤一些信息。比如，我这边就是通过iOS版本号和接口请求，然后去过滤日志，然后处理一下，回传给对方，这对我来说就是补数据的问题。
+13. 不要退缩。有逻辑性的阐述问题。但是我怎么去思考。
 
 #### 如果面试官问道系统抗压能力
 面试官要是问到压力情况的时候你心里要有数。系统现在能抗多大的压力，预期现在的流量增长水平能支撑多久（半年或1年）；有改进的方案，已经考虑引入新的存储等等。为什么用MySQL，项目时间紧张，只有MySQL，前期先上线，满足功能，再去优化。
