--- a/算法题.md
+++ b/算法题.md
@@ -211,3 +211,33 @@ var_dump(getbit(12));
 =399…4
 ````
 答：甲先拿4个，然后看乙拿几个，甲拿的球数与乙拿的和是5，甲一定胜利．
+
+# 二叉树的最小深度
+````
+<?php
+
+// 二叉树的最小深度
+function getDeep($root) {
+    if (empty($root)) {
+        return 0;
+    }
+    
+    return $this->deep($root);
+}
+
+function deep($root) {
+    if (empty($root->left) && empty($root->right)) {
+        return 1;
+    }
+
+    if ($root->left) {
+       $leftDeep = $this->deep($root->left) + 1;
+    }
+    
+    if ($root->right) {
+        $rightDeep = $this->deep($root->right) + 1;
+    }
+    
+    return min($leftDeep, $rightDeep);
+}
+````
