--- a/算法题.md
+++ b/算法题.md
@@ -241,3 +241,128 @@ function deep($root) {
     return min($leftDeep, $rightDeep);
 }
 ````
+
+# 什么是hash
+hash就是对数组的一种延伸吧。
+
+以数组为例，key从1-89.但是假如用户的key是0105111111这种形式呢？就得需要hash计算去进行对应到响应的key，比如说对应的key值是1.
+
+
+
+# 快速排序
+````
+<?php
+
+function quickSort($arr) {
+    if (empty($arr)) {
+        return [];
+    }
+    
+
+    
+    $provit = $arr[0];
+    $count = count($arr);
+    if ($count == 1) {
+        return $arr;
+    }
+    
+    $left = array();
+    $right = array();
+    for ($i = 1; $i < $count; $i++) {
+        if ($arr[$i] < $provit) {
+            $left[] = $arr[$i];
+        } else {
+            $right[] = $arr[$i];
+        }
+    }
+    
+    $left = $this->quickSort($left);
+    $right = $this->quickSort($right);
+    
+    return array_merge($left, [$provit], $right);
+}
+````
+
+# 一个索引表 a => 2000W，数据有2000w，然后索引字段为
+{
+  b,
+  c,
+  d
+}
+
+b+c index 索引为bc
+下面这个语句能命中索引么？
+````
+select * from a where c = 1 and b = 2 order by d asc limit 10;
+````
+能命中bc索引，但是这个语句效率不高，因为d上面没有索引，导致按d排序会很慢。
+
+# 只考虑数据库的情况，A => 500个库存，2000个人同时过来抢。如何避免超卖的问题。
+````
+商品的库存表
+{
+ sku_no,
+ num,
+}
+````
+// 比如用户抢购商品数量为5
+// 如果抢购数量表比库存大， 直接返回
+````
+----
+begin;
+select num from goods where sku_no = xxxxx for update;
+update goods set num = num - 5 where sku_no = xxxxx;
+commit
+------
+````
+用户订单表
+````
+{
+ user_id,
+ sku_no,
+ num
+}
+````
+````
+insert into order values(xxxx, xxxx, 5);
+````
+
+# 有64只兔子，8条跑道，每次跑8只兔子，可以决出1~8名次，最少跑几次可以算出前3名
+1. 首先64只兔子，分成8组，然后都跑一遍。跑8次
+2. 然后每组里面的第一名都跑一次。然后 分出名次。第8名，以及他所在的组，就不用考虑了。
+3. 然后让第一组的  23 和第二组的第12 第三组的1，再去跑一下。
+   第一二三组的第一名，都取取出来。
+
+
+# 求每个渠道的转换率
+select channel,sum(register)/sum(activate) as per from t where activate_time = '2020-03-10' group by channel;
+ 
+ # 是很大的文件，每一行都是一个数。最大的一个数值。
+ 1，2，3，2，3，4，5
+ 
+ # 二叉树的反转
+ ````
+ <?php
+ 
+ function get($root) {
+     if (empty($root)) {
+         return null;
+     }
+     
+     $left = '';
+     $right = '';
+     
+     if ($root->left) {
+         $left = get($root->left);
+     }
+     
+     if ($root->right) {
+         $right = get($root->right);
+     }
+     
+     $root->left = $right;
+     $root->right = $left;
+     return $root;
+ }
+ ````
+如果不用递归，该怎么实现呢？面试问道了。用队列就可以。
