--- a/算法题.md
+++ b/算法题.md
@@ -366,3 +366,17 @@ select channel,sum(register)/sum(activate) as per from t where activate_time = '
  }
  ````
 如果不用递归，该怎么实现呢？面试问道了。用队列就可以。
+
+# ip to int  将一个ip地址（182.92.31.125）转成整数？
+````
+<?php
+
+function ip2Int($str) {
+    $data = 0;
+ $str = explode('.', $str);
+ for ($i = 0; $i < count($str); $i++) {
+         $data &= ($str[$i] << (8 * $i));
+ }
+ return $data;
+}
+````
