增加几个算法题

--- a/算法题.md
+++ b/算法题.md
@@ -380,3 +380,191 @@ function ip2Int($str) {
  return $data;
 }
 ````
+
+
+# 最长回文吧？
+
+```
+
+func longestPalindrome(s string) string {
+    var maxLen int = 1
+    var minIndex int
+    var maxIndex int = 1
+
+    if s == "" {
+        return s
+    }
+
+    if len(s) == 1 {
+        return s
+    }
+    
+    for i := 0; i < len(s); i++ {
+       k := i
+       j := i
+        for j < len(s) - 1 && s[k] == s[j+1]  {
+            j = j + 1
+        } 
+        for k > 0 && j < len(s) - 1 && s[k - 1] == s[j + 1] {
+            k = k - 1
+            j = j + 1
+        } 
+       
+       tmpLen := j - k + 1
+       if tmpLen > maxLen {
+           minIndex = k
+           maxIndex = j + 1
+       }
+    }
+
+    return s[minIndex:maxIndex]
+}
+```
+
+
+
+
+
+
+
+```
+ function filterIP($ip){
+   $ip_low = ip2Int($ip_low);
+   $ip_top = ip2Int($ip_top);
+   $black_low = ip2Int($black_low);
+   $black_top = ip2Int($black_top);
+   $ip = ip2Int($ip);
+   if ($ip >= $black_low && $ip <= $black_top) {
+     return false;
+   }
+   if ($p < $ip_low || $ip > $ip_top) {
+     return false;
+   }
+   
+   return true;
+ }
+
+function ip2Int($ip) {
+  $data = 0;
+  $str = explode('.', $p);
+  for ($i = 0; $i < count($str); $i++) {
+    $data &= ($str[$i] << (8 * $i));
+  }
+  return $data;
+}
+```
+
+# 目标路径和。
+```
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+     bool hasPathSum(TreeNode* root, int sum) {
+        if(!root)return false;
+        if((!root->left)&&(!root->right)&&sum==root->val){
+            return true;
+        }
+        return hasPathSum(root->left,sum-root->val)||hasPathSum(root->right,sum-root->val);
+    }
+};
+```
+
+非递归形式怎么实现？
+
+
+# 下面会输出什么？
+```
+
+$items = ['a', 'b', 'c', 'd'];
+ 
+
+foreach($items as &$item) {
+}
+
+foreach($items as $item) {
+}
+
+echo json_encode($items);
+
+-----------------------------
+
+$items = ['a', 'b', 'c', 'd'];
+
+
+foreach($items as $item) {
+}
+
+foreach($items as &$item) {
+}
+
+echo json_encode($items);
+
+```
+
+
+# 输出一个合法的ip
+题目
+
+全部名单 [127.0.0.1] [195.0.0.1]
+
+黑名单
+[185.0.0.1] [187.0.0.1]
+
+```
+
+  <?php
+ 
+  function getValidIp($ip) {
+  // 127.0.0.1] [195.0.0.1]
+ 
+  // 黑名单
+  // [185.0.0.1] [187.0.0.1]
+     if (ip2long($ip) < ip2long('127.0.0.1') || ip2long($ip) > ip2long('195.0.0.1')) {
+         return false;
+     }
+     if (ip2long($ip) > ip2long('185.0.0.1') && ip2long($ip) < ip2long('187.0.0.1')) {
+         return false;
+     }
+     return $ip;
+  }
+ 
+  var_dump(getValidIp('184.0.0.1'));
+  var_dump(getValidIp('18666666.0.0.1'));
+```
+
+# 每隔k个节点，进行翻转
+
+
+
+
+# 动态最短路径之和，面试官说是入门级
+```
+
+
+```
+
+
+# 最近公共父节点
+```
+
+
+```
+
+
+# 去掉几个数字，剩下的数字最大？
+
+9784596. 比如去掉4个数字，剩下的数字最大，应该是剩 456.  
+```
+
+
+
+```
+
