添加了http的实体类型

--- a/计算机网络.md
+++ b/计算机网络.md
@@ -212,6 +212,42 @@ cookie 和 session的区别
 session共享。单点，没有自己搞过么？那有了解过么？单点登录。
 
 
-用消息队列，解决什么问题？
+# 用消息队列，解决什么问题？
 
+# 301和302 的区别和使用场景
+301 是永久重定向，比如 域名换了，浏览器更新历史记录，更新书签。或者是使用新域名，或者是使用新机器，或者是 目录结构进行了改变。
 
+302 临时重定向，不会更新url。只是暂时不能访问。或者用来进行服务降级。
+
+通过location 进行跳转。或者code
+
+会浪费资源。
+
+重复调用的话，也会增加资源的浪费，
+
+# http的的实体
+1. 数据类型，实体内容的类型是什么，主要是accept和 content-type
+
+比如 accept: text/html, application/xml, image/png, image/webp, 告诉服务器，我可以接受这些类型的数据。
+
+content: text/html, image/png 告诉客户端， 我返回的数据类型。
+2. 数据压缩类型实体数据的压缩方式。accept-encoding, content-encoding。
+
+accept-encoding: gzip, deflate, br
+
+content-encoding:gzip
+
+3. 语言类型类型。 accept-language, content-language. zh-En, zh, en 等方式
+
+accept-language: zh-CN, en,zh
+
+content-language:zh-CN
+
+4.  字符集表示的编码方式。accept-charset， content-type。
+
+accept-charset:utf-8
+
+content-type:text/html, charset=utf-8
+
+5. 客户端需要在accept等字段里面，跟服务器进行内容协商。要求服务器返回合适的数据。
+6. accept里面可以设置权重。 用"，" 进行分隔。
