添加了http传输大文件

--- a/计算机网络.md
+++ b/计算机网络.md
@@ -251,3 +251,18 @@ content-type:text/html, charset=utf-8
 
 5. 客户端需要在accept等字段里面，跟服务器进行内容协商。要求服务器返回合适的数据。
 6. accept里面可以设置权重。 用"，" 进行分隔。
+
+# http 如何传输大文件？ 视频之类的数据如何 分段传输？
+1. chucked
+2. 范围传输，范围选择
+```
+HTTP/1.1 206 Partial Content
+Content-Length: 32
+Accept-Ranges: bytes
+Content-Range: bytes 0-31/96
+ 
+// this is a plain text json doc
+```
+Accept-Ranges 表示接受范围传输，Content-Range标识内容的范围。状态码为206
+
+因为传输的结果里面有长度标识，所以\r\n 不会截断数据。
