增加了代理的一点知识

--- a/计算机网络.md
+++ b/计算机网络.md
@@ -266,3 +266,13 @@ Content-Range: bytes 0-31/96
 Accept-Ranges 表示接受范围传输，Content-Range标识内容的范围。状态码为206
 
 因为传输的结果里面有长度标识，所以\r\n 不会截断数据。
+
+# X-Forwarded-For 和 X-Real-IP
+而“X-Forwarded-For”追加的是请求方的 IP 地址
+
+X-Real-IP 记录的是客户端的地址，如果只有一层代理的话。
+
+X-Real-IP 和 X-Forwarded-For  是一致的。
+
+# 代理的缺点
+代理做做一些逻辑操作， 会影响性能，增加链路长度，增加响应时间
