--- a/算法题.md
+++ b/算法题.md
@@ -561,10 +561,22 @@ echo json_encode($items);
 
 # 去掉几个数字，剩下的数字最大？
 
-9784596. 比如去掉4个数字，剩下的数字最大，应该是剩 456.  
+例如数字9784596  比如去掉4个数字，剩下的数字最大，应该是剩 456.  
+
+应该考虑的是一个增进的关系吧。
 ```
 
 
 
 ```
 
+# 零钱兑换 头条
+给定不同面额的硬币 coins 和一个总金额 amount。编写一个函数来计算可以凑成总金额所需的最少的硬币个数。如果没有任何一种硬币组合能组成总金额，返回 -1。
+
+ 
+
+示例 1:
+
+输入: coins = [1, 2, 5], amount = 11
+输出: 3 
+解释: 11 = 5 + 5 + 1
