--- a/面试官问题.md
+++ b/面试官问题.md
@@ -9,3 +9,14 @@
 # 如何设计一个BI看板
 
 # 如何设计一个支付系统？如何限流？
+
+
+
+
+
+# 后来话
+其实这些面试题，在你过后思考的时候，你会怎么认为呢？
+
+有很多题，都是原题。背背原题就好了。但是现在这种情况所占的比例越来越少了。现在的面试，越来越注重面试者的综合能力了，包括自己平时的学习和总结，这些都是软实力。
+
+我身边有好多大佬，他们平时会学习，他们的能力很强，希望自己能钻进去，学习下去。
